[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/ui/pokemon Battle/selecct vertex.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/pokemon fonts/Pokemon-FRLG.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/ui/pokemon Battle/skill_box_crop.png" type="Texture" id=3]
[ext_resource path="res://src/combat/interface/battle_scenes/Menu.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/pokemon Battle/dialog_box.png" type="Texture" id=5]
[ext_resource path="res://src/interface/pokemon_party_screen/PokemonPartyScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/interface/bag/Bag.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=2]
size = 75
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Bag" parent="." instance=ExtResource( 7 )]
visible = false

[node name="DialogBox" type="Control" parent="."]
visible = false
margin_top = 740.0
margin_right = 1920.0
margin_bottom = 1097.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box" type="TextureRect" parent="DialogBox"]
margin_top = 46.0
margin_right = 1915.0
margin_bottom = 339.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="DialogBox/Box"]
margin_left = 92.0
margin_top = 56.0
margin_right = 1820.0
margin_bottom = 236.0
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 2 )
text = "ABCabc"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkillBox" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box" type="TextureRect" parent="SkillBox"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 746.0
margin_right = 1880.0
margin_bottom = 1039.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow" type="TextureRect" parent="SkillBox/Box"]
margin_left = 735.0
margin_top = 180.0
margin_right = 800.0
margin_bottom = 236.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PPmax" type="Label" parent="SkillBox/Box"]
margin_left = 1810.0
margin_top = 65.0
margin_right = 1958.0
margin_bottom = 137.0
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 1 )
text = "30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PPcur" type="Label" parent="SkillBox/Box"]
margin_left = 1617.0
margin_top = 65.0
margin_right = 1764.0
margin_bottom = 137.0
custom_colors/font_color = Color( 0.2, 0.2, 0.254902, 1 )
custom_fonts/font = SubResource( 1 )
text = "23
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Type" type="Label" parent="SkillBox/Box"]
margin_left = 1567.0
margin_top = 183.0
margin_right = 1887.0
margin_bottom = 260.0
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 1 )
text = "Electric
"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skill1" type="Label" parent="SkillBox/Box"]
margin_left = 165.0
margin_top = 60.0
margin_right = 698.0
margin_bottom = 132.0
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 1 )
text = "Electro Ball"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skill2" type="Label" parent="SkillBox/Box"]
margin_left = 800.0
margin_top = 60.0
margin_right = 1201.0
margin_bottom = 141.0
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 1 )
text = "Frozen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skill3" type="Label" parent="SkillBox/Box"]
margin_left = 165.0
margin_top = 180.0
margin_right = 678.0
margin_bottom = 260.0
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 1 )
text = "Heal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skill4" type="Label" parent="SkillBox/Box"]
margin_left = 800.0
margin_top = 180.0
margin_right = 1201.0
margin_bottom = 290.0
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 1 )
text = "Posion"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Entrance" type="Control" parent="."]
margin_top = 740.0
margin_right = 40.0
margin_bottom = 780.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hint" type="TextureRect" parent="Entrance"]
margin_top = 46.0
margin_right = 1285.0
margin_bottom = 336.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Entrance/Hint"]
margin_left = 77.0
margin_top = 53.0
margin_right = 1201.0
margin_bottom = 240.0
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 2 )
text = "What do somebody wants to do?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box" type="TextureRect" parent="Entrance"]
margin_left = 1288.0
margin_top = 46.0
margin_right = 1919.0
margin_bottom = 336.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow" type="TextureRect" parent="Entrance/Box"]
margin_left = 380.0
margin_top = 165.0
margin_right = 420.0
margin_bottom = 221.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fight" type="Label" parent="Entrance/Box"]
margin_left = 70.0
margin_top = 60.0
margin_right = 291.0
margin_bottom = 139.0
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 1 )
text = "Fight"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bag" type="Label" parent="Entrance/Box"]
margin_left = 420.0
margin_top = 60.0
margin_right = 617.0
margin_bottom = 139.0
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 1 )
text = "Bag"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pokemon" type="Label" parent="Entrance/Box"]
margin_left = 70.0
margin_top = 164.0
margin_right = 336.0
margin_bottom = 243.0
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 1 )
text = "Pokemon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Run" type="Label" parent="Entrance/Box"]
margin_left = 420.0
margin_top = 164.0
margin_right = 641.0
margin_bottom = 243.0
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 1 )
text = "Run"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PokemonPartyScreen" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="cancel" from="Bag" to="." method="_on_Bag_cancel"]
[connection signal="item_selected" from="Bag" to="." method="_on_Bag_item_selected"]
[connection signal="cancel" from="PokemonPartyScreen" to="." method="_on_PokemonPartyScreen_cancel"]
[connection signal="switch_pokemon" from="PokemonPartyScreen" to="." method="_on_PokemonPartyScreen_switch_pokemon"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
